Remove whitespace style in page.css, fix #37

--- a/src/css/page.css
+++ b/src/css/page.css
@@ -58,7 +58,6 @@
     margin: 10px 80px;
     font-size: 1.2em;
     padding: 10px 20px;
-    white-space: pre-wrap;
 }
 
 @media (max-width: 1280px) {
